<resources>
    <string name="app_name">Ecolife</string>
    <string name="主页">主页</string>
    <string name="告警">告警</string>
    <string name="关注">关注</string>
    <string name="我的">我的</string>
    <string name="点击">点击</string>
    <string name="找不到想要的WiFi采集器">找不到想要的WiFi采集器</string>
    <string name="联网设置">联网设置</string>
    <string name="采集器热点">采集器热点</string>
    <string name="热点列表">热点列表</string>
    <string name="WIFI列表">WIFI列表</string>
    <string name="连接">连接</string>
    <string name="断开">断开</string>
    <string name="连接中">连接中</string>
    <string name="connected">已连接</string>
    <string name="信号强">信号：强</string>
    <string name="信号弱">信号：弱</string>
    <string name="信号一般">信号：一般</string>
    <string name="确定">确定</string>
    <string name="取消">取消</string>
    <string name="采集器未连接">采集器未连接</string>
    <string name="缺少相关权限">缺少相关权限</string>
    <string name="温馨提示">温馨提示</string>
    <string name="定位权限没打开启是否前往开启">定位权限没打开启，是否前往开启？</string>
    <string name="Wifi没有开启是否开启">Wifi没有开启，是否开启？</string>
    <string name="设置">设置</string>
    <string name="进入本地模式">进入本地模式</string>
    <string name="SSID不能为空">SSID 不能为空</string>
    <string name="密码不能为空">密码 不能为空</string>
    <string name="设置中">设置中</string>
    <string name="设置成功">设置成功</string>
    <string name="设置失败请稍后重试">设置失败，请稍后重试</string>
    <string name="获取验证码">获取验证码</string>
    <string name="监控">监控</string>
    <string name="角色">角色</string>
    <string name="加载中">加载中</string>
    <string name="登录中">登录中</string>
    <string name="密码错误">密码错误</string>
    <string name="请选择登录角色">请选择登录角色</string>
    <string name="角色选择">角色选择</string>
    <string name="机器编号_冒号">设备串号：</string>
    <string name="设备类型_冒号">设备类型：</string>
    <string name="运维">运维</string>
    <string name="用户">用户</string>
    <string name="厂家">厂家</string>
    <string name="登录">登录</string>
    <string name="权限密码">权限密码</string>
    <string name="账号不能为空">账号 不能为空</string>
    <string name="昵称不能为空">昵称 不能为空</string>
    <string name="验证码不能为空">验证码 不能为空</string>
    <string name="手机号码_邮箱">手机号码/邮箱</string>
    <string name="密码">密码</string>
    <string name="立即注册">立即注册</string>
    <string name="忘记密码">忘记密码</string>
    <string name="示例电站">示例电站</string>
    <string name="第三方登录">第三方登录</string>
    <string name="手机号或者邮箱格式错误">手机号或者邮箱格式错误</string>
    <string name="密码长度必须大于6位字符">密码长度必须大于6位字符</string>
    <string name="请先同意用户服务协议">请先同意用户服务协议</string>
    <string name="确认密码与新密码不一致">确认密码与新密码不一致</string>
    <string name="验证码">验证码</string>
    <string name="新密码">新密码</string>
    <string name="确认密码">确认密码</string>
    <string name="完成">完成</string>
    <string name="我已阅读并同意用户服务协议">我已阅读并同意用户服务协议</string>
    <string name="注册">注册</string>
    <string name="昵称">昵称</string>
    <string name="立刻进入本地模式">立刻进入本地模式</string>
    <string name="无法获取设备信息">无法获取设备信息</string>
    <string name="一般">一般</string>
    <string name="严重">严重</string>
    <string name="总收益">总收益</string>
    <string name="等效植树">等效植树</string>
    <string name="发电中">发电中</string>
    <string name="离线中">离线中</string>
    <string name="停机中">停机中</string>
    <string name="待机中">待机中</string>
    <string name="电站列表">电站列表</string>
    <string name="发电功率">发电功率</string>
    <string name="今日发电">今日发电</string>
    <string name="今日收益">今日收益</string>
    <string name="串号">串号</string>
    <string name="取消关注">取消关注</string>
    <string name="关注设备">关注设备</string>
    <string name="状态">状态</string>
    <string name="所属电站_冒号">所属电站：</string>
    <string name="告警时间_冒号">告警时间：</string>
    <string name="金额单位_括号">(元)</string>
    <string name="CO2减排">CO2减排</string>
    <string name="等效植树单位_括号">(棵)</string>
    <string name="节能煤标">节能煤标</string>
    <string name="节能煤标单位_括号">(kg)</string>
    <string name="个人信息">个人信息</string>
    <string name="创建电站">创建电站</string>
    <string name="语言">语言</string>
    <string name="关于">关于</string>
    <string name="本地模式">本地模式</string>
    <string name="采集器联网">采集器联网</string>
    <string name="用户名">用户名</string>
    <string name="概览">概览</string>
    <string name="运行">运行</string>
    <string name="设备">设备</string>
    <string name="电网功率_W">电网功率(W)</string>
    <string name="主次负载_W">主/次负载(W)</string>
    <string name="电池功率_W">电池功率(W)</string>
    <string name="发电功率_W">发电功率(W)</string>
    <string name="电网功率_Kw">电网功率(kW)</string>
    <string name="主次负载_Kw">主/次负载(kW)</string>
    <string name="电池功率_Kw">电池功率(kW)</string>
    <string name="发电功率_Kw">发电功率(kW)</string>
    <string name="日并网发电量_单位">日并网发电量(kWh)</string>
    <string name="总并网发电量_单位">总并网发电量(kWh)</string>
    <string name="PV日发电量_单位">PV日发电量(kWh)</string>
    <string name="PV总发电量_单位">PV总发电量(kWh)</string>
    <string name="日负载耗电量_单位">日负载耗电量(kWh)</string>
    <string name="总负载耗电量_单位">总负载耗电量(kWh)</string>
    <string name="电池日充电量_单位">电池日充电量(kWh)</string>
    <string name="电池日放电量_单位">电池日放电量(kWh)</string>
    <string name="三相光伏逆变器">三相光伏逆变器</string>
    <string name="三相光伏储能逆变器">三相光伏储能逆变器</string>
    <string name="单相光伏并网逆变器">单相光伏并网逆变器</string>
    <string name="单相光伏储能变流器">单相光伏储能变流器</string>
    <string name="待机">待机</string>
    <string name="并网">并网</string>
    <string name="故障">故障</string>
    <string name="关机">关机</string>
    <string name="离网">离网</string>
    <string name="运行数据">运行</string>
    <string name="设备信息">设备</string>
    <string name="电压_单位">电压(V)</string>
    <string name="电流_单位">电流(A)</string>
    <string name="电网电压_单位">电网电压(V)</string>
    <string name="电网电流_单位">电网电流(A)</string>
    <string name="负载电压_单位">负载电压(V)</string>
    <string name="负载电流_单位">负载电流(A)</string>
    <string name="逆变电压_单位">逆变电压(V)</string>
    <string name="逆变电流_单位">逆变电流(A)</string>
    <string name="功率_W">功率(W)</string>
    <string name="功率_Kw">功率(kW)</string>
    <string name="单相协议">单相光储协议</string>
    <string name="三相协议">三相光储协议</string>
    <string name="系统运行状态">系统运行状态</string>
    <string name="有功功率_单位">有功功率(kW)</string>
    <string name="无功功率_单位">无功功率(kVar)</string>
    <string name="视在功率_单位">视在功率(kVA)</string>
    <string name="基本设置">基本</string>
    <string name="电池设置">电池</string>
    <string name="电网设置">电网</string>
    <string name="高级设置">高级</string>
    <string name="模式设置">模式</string>
    <string name="校准设置">校准</string>
    <string name="设备设置">设备</string>
    <string name="开关机">开关机</string>
    <string name="工作模式">工作模式</string>
    <string name="系统时间设置">系统时间设置</string>
    <string name="删除">删除</string>
    <string name="自用优先">自用优先</string>
    <string name="储能优先">储能优先</string>
    <string name="削峰填谷">削峰填谷</string>
    <string name="能量调度">能量调度</string>
    <string name="时段">时段</string>
    <string name="时间">时间</string>
    <string name="时间_标题">时间</string>
    <string name="年">年</string>
    <string name="月">月</string>
    <string name="日">日</string>
    <string name="时">时</string>
    <string name="分">分</string>
    <string name="秒">秒</string>
    <string name="最多设置6个时段">最多设置6个时段</string>
    <string name="设置失败">设置失败</string>
    <string name="确认设置">确认设置</string>
    <string name="确认设置_换行">确认\n设置</string>
    <string name="结束时间必须大于开始时间">结束时间必须大于开始时间</string>
    <string name="读取中">读取中...</string>
    <string name="输入">输入</string>
    <string name="确认恢复出厂设置">确认恢复出厂设置？</string>
    <string name="确认清除所有发电量">确认清除所有发电量？</string>
    <string name="确认清除历史记录">确认清除历史记录？</string>
    <string name="密码为6位数字">密码为6位数字</string>
    <string name="标准类型">标准类型</string>
    <string name="独立">独立</string>
    <string name="四路并联">四路并联</string>
    <string name="两路并联">两路并联</string>
    <string name="德国">德国</string>
    <string name="英国">英国</string>
    <string name="中国">中国</string>
    <string name="澳洲">澳洲</string>
    <string name="新西兰">新西兰</string>
    <string name="法国VDE">法国VDE</string>
    <string name="意大利">意大利</string>
    <string name="荷兰">荷兰</string>
    <string name="西班牙">西班牙</string>
    <string name="泰国PEA">泰国PEA</string>
    <string name="泰国MEA">泰国MEA</string>
    <string name="美国">美国</string>
    <string name="美国加州">美国加州</string>
    <string name="加拿大">加拿大</string>
    <string name="农村电网">农村电网</string>
    <string name="城镇电网">城镇电网</string>
    <string name="法国VFR">法国VFR</string>
    <string name="法国SEI">法国SEI</string>
    <string name="法国CRAE">法国CRAE</string>
    <string name="法国">法国</string>
    <string name="其他">其他</string>
    <string name="铅酸电池">铅酸电池</string>
    <string name="磷酸铁锂电池">磷酸铁锂电池</string>
    <string name="三元电池">三元电池</string>
    <string name="铅碳电池">铅碳电池</string>
    <string name="关闭">关闭</string>
    <string name="开启">开启</string>
    <string name="about_us_text">\u3000\u3000厦门科华恒盛股份有限公司前身创立于1988年，2010年深圳A股上市（股票代码 002335），30年来专注电力电子技术研发与设备制造，是行业首批\"国家认定企业技术中心\"、\"国家火炬计划重点项目\"承担单位、国家重点高新技术企业、国家技术创新示范企业和全国首批\"两化融合管理体系\"贯标企业。公司拥有智慧电能、云服务、新能源三大业务体系，产品方案广泛应用于金融、工业、交通、通信、政府、国防、军工、核电、教育、医疗、电力、新能源、云计算中心、电动汽车充电等行业，服务于全球100多个国家和地区的用户。\n\u3000\u3000科华恒盛始终坚持\"技术自主、品牌自有\"的发展理念，自主培养的3名国务院特殊津贴专家领衔900多人的研发团队。科华恒盛专注电源技术，致力于动力创新，先后承担国家级与省部级火炬计划、国家重点新产品计划、863计划等项目30余项，参与了60多项国家和行业标准的制定，获得国家专利、软件著作权等知识产权615项。\n\u3000\u3000科华恒盛电源产品及解决方案成功入围人行、中行、建行、农行、中国人寿、国税总局、中国电信、中国联通、中国铁通、中央国家机关等UPS设备选型，获军队装备物资采购、中国石油天然气管道、蓝星化工集团等供应商资格，并与国内外知名企业建立了战略合作伙伴关系。众多重要工程都选择KELONG®，如G20杭州峰会、天津全运会、港珠澳大桥、广西防城港核电站、南京青奥、奥运鸟巢、上海世博、三峡枢纽、金税工程、首都机场、广电总局、中海石油钻井平台、上海商飞、埃塞俄比亚铁路等。\n\u3000\u3000科华恒盛一直保持着高速的业绩增长，权威咨询企业赛迪顾问发布的报告显示：中国UPS整体市场销售额/大功率UPS(≥20KVA)市场销售额居国产品牌首位，连续20年领跑中国本土电源产业。\n\u3000\u3000科华恒盛在全国建立16个技术服务中心、50多个厂家技术服务网点。新型的3A服务，从传统的应急维修转变为以预防为主的维护和主动服务模式，厂商级服务模式给科华恒盛带来了\"用户满意方案/品牌奖\"、\"中国高效能数据中心优秀品牌奖\"\"最佳服务承诺兑现奖\"\"UPS服务满意金奖\"\"中国光伏行业最佳服务商\"等殊荣。</string>
    <string name="提交时段设置">提交时段设置</string>
    <string name="开机密码">开机密码</string>
    <string name="试用期密码">试用期密码</string>
    <string name="密码相关">密码相关</string>
    <string name="充电时段最多6个">充电时段（最多6个）</string>
    <string name="放电时段最多6个">放电时段（最多6个）</string>
    <string name="开机密码与试用期密码需同时设置">开机密码与试用期密码需同时设置</string>
    <string name="串号相关串号">串号相关-串号</string>
    <string name="串号相关开机密码功能">串号相关-开机密码功能</string>
    <string name="串号相关试用期功能">串号相关-试用期功能</string>
    <string name="串号相关试用期天数">串号相关-试用期天数</string>
    <string name="MAC地址">MAC地址</string>
    <string name="机器型号">机器型号</string>
    <string name="站号配置串号">站号配置-串号</string>
    <string name="站号配置站号">站号配置-站号</string>
    <string name="空闲">空闲</string>
    <string name="充电">充电</string>
    <string name="放电">放电</string>
    <string name="异常">异常</string>
    <string name="时段重叠">时段重叠</string>
    <string name="串号长度为20位字符">串号长度为20位字符</string>
    <string name="型号长度为20位字符">机器型号长度为20位字符以内</string>
    <string name="MAC地址长度为6位字符">MAC地址长度为6位字符以内</string>
    <string name="站号范围">站号范围(1~247)</string>
    <string name="点击设置">点击设置</string>
    <string name="非法密码">非法密码</string>
    <string name="无功支撑模式">无功支撑模式</string>
    <string name="零无功模式">零无功模式</string>
    <string name="线性">线性</string>
    <string name="滞回">滞回</string>
    <string name="试用期临近">试用期临近</string>
    <string name="试用期到期">试用期到期</string>
    <string name="试用期剩余时间">试用期剩余时间</string>
    <string name="小时">小时</string>
    <string name="串号相关设置">串号相关设置</string>
    <string name="密码下发失败">密码下发失败</string>
    <string name="请设置串号相关串号">请设置\"串号相关-串号\"</string>
    <string name="请设置串号相关试用期天数">请设置\"串号相关-试用期天数\"</string>
    <string name="历史">历史</string>
    <string name="并脱网记录">并脱网记录</string>
    <string name="历史故障">历史故障</string>
    <string name="用户日志">用户日志</string>
    <string name="功率调度日志">功率调度日志</string>
    <string name="本地操作日志">本地操作日志</string>
    <string name="无记录">无记录</string>
    <string name="无更多记录">无更多记录</string>
    <string name="设备编号">设备编号</string>
    <string name="是否更改设置">是否更改设置？</string>
    <string name="单相并脱网历史故障记录映射模板">单相并脱网、历史故障记录映射模板</string>
    <string name="单相用户日志功率调度日志映射模板">单相用户日志、功率调度日志映射模板</string>
    <string name="三相无屏并脱网历史故障记录映射模板">三相无屏并脱网、历史故障记录映射模板</string>
    <string name="三相有屏并脱网历史故障记录映射模板">三相有屏并脱网、历史故障记录映射模板</string>
    <string name="三相用户日志功率调度日志映射模板">三相用户日志、功率调度日志映射模板</string>
    <string name="选择映射模板">选择映射模板</string>
    <string name="记录条数读取失败">记录条数读取失败</string>
    <string name="再按一次退出本地模式">再按一次退出本地模式</string>
    <string name="试用期天数">试用期天数</string>
    <string name="再次确认密码">再次确认密码</string>
    <string name="请设置新密码">请设置6-16位新密码</string>
</resources>